# Temporal-Changes-Detection-in-3D-scenes

./: CMakeLists.txt  README.md  import_out.h  index.html  main.cpp  masterThesis.cpp  params.json  pipelines.cpp  pipelines.hpp
chngDet/: chngDet.cpp  chngDet.hpp
chngDetGUI/: Makefile  chngDetect.pro  chngdetect.cpp  chngdetect.h  chngdetect.ui  main.cpp
common/: common.hpp  common.hpp~  globVariables.hpp
matlabFiles/: ROCcurves.m  getPSM.m  kaistROC.m  shelfROC.m
trash/utilCode/: CMakeLists.txt  CMakeLists.txt~
trash/utilCode/src/: externalInterface.h  externalInterface.h~
util/: #reconstruction.hpp#  .#reconstruction.hpp  CMakeLists.txt  CMakeLists.txt~  meshProcess.cpp  meshProcess.cpp~  meshProcess.hpp  meshProcess.hpp~  pbaDataInterface.h  pbaUtil.cpp  pbaUtil.h  reconstruction.hpp  utilClouds.hpp  utilClouds.hpp~  utilIO.cpp  utilIO.cpp~  utilIO.hpp  utilIO.hpp~
